Volha_Sarkisova/12.KUBERNETES.Data.Security/nginx-deployment-injected.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: nginx
  name: nginx-deployment
spec:
  replicas: 4
  selector:
    matchLabels:
      app: nginx
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      annotations:
        istio.io/rev: default
        kubectl.kubernetes.io/default-container: nginx
        kubectl.kubernetes.io/default-logs-container: nginx
        prometheus.io/path: /stats/prometheus
        prometheus.io/port: "15020"
        prometheus.io/scrape: "true"
        sidecar.istio.io/inject: "true"
        sidecar.istio.io/interceptionMode: REDIRECT
        sidecar.istio.io/status: '{"initContainers":["istio-validation","istio-proxy"],"containers":null,"volumes":["workload-socket","credential-socket","workload-certs","istio-envoy","istio-data","istio-podinfo","istio-token","istiod-ca-cert","istio-ca-crl"],"imagePullSecrets":null,"revision":"default"}'
        traffic.sidecar.istio.io/excludeInboundPorts: "15020"
        traffic.sidecar.istio.io/includeInboundPorts: '*'
        traffic.sidecar.istio.io/includeOutboundIPRanges: '*'
      labels:
        app: nginx
        security.istio.io/tlsMode: istio
        service.istio.io/canonical-name: nginx
        service.istio.io/canonical-revision: latest
    spec:
      containers:
      - image: nginx:1.25
        livenessProbe:
          httpGet:
            path: /app-health/nginx/livez
            port: 15020
          initialDelaySeconds: 30
          periodSeconds: 10
          timeoutSeconds: 3
        name: nginx
        ports:
        - containerPort: 80
          name: http
        readinessProbe:
          httpGet:
            path: /app-health/nginx/readyz
            port: 15020
          initialDelaySeconds: 5
          periodSeconds: 5
          timeoutSeconds: 2
        resources:
          limits:
            cpu: 500m
            memory: 128Mi
          requests:
            cpu: 250m
            memory: 64Mi
        volumeMounts:
        - mountPath: /usr/share/nginx/html
          name: html-volume
        - mountPath: /root/.ssh
          name: ssh-keys
          readOnly: true
        - mountPath: /etc/nginx/conf.d/default.conf
          name: nginx-config
          subPath: default.conf
        - mountPath: /usr/share/nginx/html/index.php
          name: php-index
          subPath: index.php
      - image: php:8.2-fpm-alpine
        name: php-fpm
        resources:
          limits:
            cpu: 200m
            memory: 128Mi
          requests:
            cpu: 100m
            memory: 64Mi
        volumeMounts:
        - mountPath: /usr/share/nginx/html
          name: html-volume
        - mountPath: /usr/share/nginx/html/index.php
          name: php-index
          subPath: index.php
      volumes:
      - name: workload-socket
      - name: credential-socket
      - name: workload-certs
      - emptyDir:
          medium: Memory
        name: istio-envoy
      - emptyDir: {}
        name: istio-data
      - downwardAPI:
          items:
          - fieldRef:
              fieldPath: metadata.labels
            path: labels
          - fieldRef:
              fieldPath: metadata.annotations
            path: annotations
        name: istio-podinfo
      - name: istio-token
        projected:
          sources:
          - serviceAccountToken:
              audience: istio-ca
              expirationSeconds: 43200
              path: istio-token
      - configMap:
          name: istio-ca-root-cert
        name: istiod-ca-cert
      - configMap:
          name: istio-ca-crl
          optional: true
        name: istio-ca-crl
      - emptyDir: {}
        name: html-volume
      - name: ssh-keys
        secret:
          defaultMode: 384
          secretName: ssh-keys
      - configMap:
          name: nginx-config
        name: nginx-config
      - configMap:
          name: nginx-php-index
        name: php-index
status: {}
---
