Volha_Sarkisova/12.KUBERNETES.Data.Security/nginx-gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: nginx-gateway
  labels:
    app: nginx
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "nginx-test.k8s-17.sa"
    - "nginx-test.k8s-18.sa"
